--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ button {
     margin-top: -8px;
     margin-left: -8px;
     margin-right: -8px;
-    min-width: 90vw;
     padding: .15em;
     text-align: center;
     text-transform: uppercase;
@@ -58,8 +57,59 @@ button {
     transform: translateY(4px);
 }
 
-#gamecontainer {
+.btn-game::before {
+    text-transform: uppercase;
+    padding: 1em;
+    font-size: 1.2em;
+    color: rgb(255, 255, 255);
+    background-color: rgba(1, 39, 251, 0.52);
+    border: 3px solid rgb(2, 1, 1);
+    border-radius: 5px;
+}
+
+.btn-game::after {
+    background-color: rgba(1, 38, 251, 0.616);
+    transform: translateY(4px);
+}
+
+.btn-game:disabled {
+    cursor: default;
+    background-color: rgba(7, 1, 1, 0.315);
+    transform: translateY(4px);
+}
+
+.btn-game-active {
+    text-transform: uppercase;
+    padding: 1em;
+    font-size: 1.2em;
+    color: rgb(255, 255, 255);
+    border: 3px solid rgb(2, 1, 1);
+    border-radius: 5px;
+    background-color: rgba(7, 1, 1, 0.315);
+    transform: translateY(4px);
+}
+
+#table {
     margin: auto;
+    width: 1175px;
+    display: table;
+    clear: both;
+}
+
+#prizeTableHeader {
+    text-align: center;
+    text-decoration: underline;
+    margin-top: -15px;
+}
+
+#gamecontainer {
+    width: 512px;
+    height: 550px;
+    border-radius: 20px;
+    background-color: rgba(255, 0, 0, 0.74);
+    margin: auto;
+    float: left;
+    margin-top: 15px;
     overflow: hidden;
     padding: 2em;
 }
@@ -69,9 +119,25 @@ button {
     margin-right: auto;
 }
 
+#prizeTable {
+    background-color: rgba(0, 124, 17, 0.664);
+    border-radius: 20px;
+    float: right;
+    width: 512px;
+    height: 550px;
+    margin-top: 15px;
+    overflow: hidden;
+    padding: 2em;
+}
+
+#tablecontent img {
+    height: 45px;
+}
+
 .mainbox {
     padding: .5em;
     text-align: center;
+    float: left;
 }
 
 .mainbox,
@@ -85,13 +151,15 @@ tr {
 }
 
 .ui td {
-    background-color: rgba(1, 225, 245, 0.849);
     text-align: center;
     border: none;
 }
 
 .ui2 td {
-    background-color: rgba(1, 225, 245, 0.849);
     text-align: center;
-    
+}
+
+#prizeTableContent * {
+    background-color: rgba(255, 255, 255, 0);
+    border: none;
 }
